# pvz-bintools

./: .gitignore  Cargo.toml  Lisensor.toml  README.md  Taskfile.yml
.github/workflows/: build.yml  release.yml
data/: .gitignore  resources1051.yaml  resources1065.yaml  resources1073.yaml  resources1096.yaml
src/: cli.rs  lib.rs  main.rs
src/tool/: mod.rs
src/tool/pakc/: api.rs  filetime.rs  mod.rs  pak.rs
src/tool/reanimc/: api.rs  check.rs  data.rs  main.rs  mod.rs  xml.rs
src/tool/resc/: README.md  api.rs  codegen.rs  compiler.rs  config.rs  impl.cpp  manifest.rs  mod.rs  resources.yaml
src/util/: mod.rs  pattern.rs  stream.rs
tests/: manifest_test.rs  pak_test.rs  reanim_test.rs
